# bot-command

./: .dockerignore  .env.example  .gitignore  IMPROVEMENTS.md  PROJECT_TRACKING.md  README.md  bot_monitor_session.session  main.py  manage_bots.py  pyproject.toml  requirements.txt  run.sh  setup_docker.py  setup_telegram.py  test_es_connection.py
config/: settings.py
config/ssl/: fullchain.pem  http_ca.crt  privkey.pem
docker/: DOCKER_README.md  docker-compose.yml
docker/dashboards/: kibana_dashboard.json  kibana_dashboard.ndjson
src/: coordinator.py
src/processing/: message_parser.py  parser_utils.py  worker_pool.py
src/processing/stealer_plugins/: __init__.py  azorult.py  base.py  lumma.py  redline.py  risepro.py  snake.py  stealc.py  vidar.py  vip.py  xworm.py
src/storage/: elastic_client.py  mongo_client.py
src/telegram/: client.py
src/utils/: __init__.py  base_client.py  error_handler.py  file_handler.py  stats_tracker.py
tests/: test_azorult_parser.py  test_circuit_breaker.py  test_json_parsing.py  test_message_parser.py
