[project]
name = "bot-command"
version = "0.1.0"
description = "Silent intelligence-gathering tool for Telegram-based stealer bots"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Zane Xenovitch", email = "zane@xenovitch.com" }]
dependencies = [
  "aiohttp>=3.9.1",
  "cryptography>=41.0.7",
  "pydantic>=2.5.2",
  "python-dotenv>=1.0.0",
  "python-telegram-bot>=20.7",
  "rich>=13.6.0",
  "sqlalchemy>=2.0.23",
  "structlog>=23.2.0",
  "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.3",
  "black>=23.11.0",
  "isort>=5.12.0",
  "mypy>=1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]
